# strid

./: .gitignore  .travis.yml  CHANGES  CHANGES.md  Makefile  README  README.md  TODO  TODO.md  dune-project  opam  strid  strid.1  strid.opam
.github/workflows/: build.yml
debian/: changelog  control  copyright  rules  watch
doc/: Makefile  add.strid  arrow.strid  bang_maybe_cut.strid  bialgebra_hopf_l.strid  bialgebra_hopf_r.strid  bicat_nat_transfo_l.strid  bicat_nat_transfo_r.strid  monoid_assoc_l.strid  monoid_assoc_r.strid  monoid_mult.strid  monoid_mult_assoc_l.strid  monoid_mult_assoc_r.strid  monoid_neutral.strid  monoid_neutral_l.strid  monoid_neutral_r.strid  monoid_unit.strid  monoidal_bifunct_l.strid  mult_ab.strid  mult_label.strid  mult_small_label.strid  order_braid.strid  order_line.strid  order_mult.strid  order_nboxm.strid  order_sym.strid  order_unit.strid  order_vbox.strid  pl_composition.strid  strid.conf  stridman.sty  stridman.tex  yang_baxter_l.strid  yang_baxter_r.strid
docs/: Makefile  index.html  standard.css
docs/manual/: Makefile  bang_maybe_cut.strid  bang_maybe_cut_operad.strid  bialgebra_hopf_l.strid  bialgebra_hopf_r.strid  bicat_nat_transfo_l.strid  bicat_nat_transfo_l.tex  bicat_nat_transfo_r.tex  (+14 more)
gtkstrid/: Makefile  OCamlMakefile  gtkstrid.glade  main.ml
src/: .gitignore  Makefile  OCamlMakefile  common.ml  conf.ml  cubic_spline.ml  dune  env.ml  lang.ml  lang.mli  lang_lexer.mll  lang_parser.mly  lexer.mll  parser.mly  spline.ml  strid.ml  term.ml  test.strid  tikz.tex  vect.ml  wire.ml  wire.mli
website/: Makefile
(+1 files in other folders)
